[B]Version 2.5.0: January 31th, 2012[/B]
- Initial XBMC Eden release

[B]Version 1.4.1: January 30th, 2012[/B]
- Fix for thumbnail support

[B]Version 1.4.0: January 12th, 2012[/B]
- New show: FauxShow
- New show: In Depth Look
- Fan art
- Configurable video quality
- Thumbnail support once ChrisLAS adds them
- Switched from FeedParser to BeautifulSoup for feed aggregation
- Various small fixes

[B]Version 1.3.0: January 10th, 2012[/B]
- Moved to GitHub for version control
- New show: Live

[B]Version 1.2.0: September 15th, 2011[/B]
- Switched to HD video
- Updated some of the show thumbnail images
- Fix for RSS feeds without enclosures

[B]Version 1.1.0: July 25th, 2011[/B]
- New show: The MMOrgue
- New show: TechSNAP
- New show: SciByte

[B]Version 1.0.1: July 20th, 2011[/B]
- Updated icon from freezy. Thanks freezy!

[B]Version 1.0.0: July 20th, 2011[/B]
- Initial release