@@ -6,8 +6,9 @@ Shows
 -----
 * [Live Show](http://jblive.tv)
 * Linux Action Show
-* STOked
 * TechSNAP
+* STOked
+* TORked
 * SciByte
 * In Depth Look
 * FauxShow
@@ -21,3 +22,4 @@ Instructions
 ------------
 1. Download the addon from the official XBMC Addon Repository
 2. Visit Video Addons, configure and load up Jupiter Broadcasting
+
